Fix carousel not showing properly on Windows scaled resolutions (150% FHD), added current year's group photo to carousel slide three with extra responsive image

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -198,7 +198,7 @@
 
   .carousel-inner > .item > img {
     height: 100%;
-    max-width: none;
+    min-width: 100%;
     opacity: 0.7;
   }
 
@@ -230,7 +230,7 @@
   }
 
   .carousel-inner > .item > img {
-    width: 100%;
+    max-width: auto;
     height: 100%;
     opacity: 0.7;
   }
@@ -256,4 +256,11 @@
 }
 .carousel-control {
   opacity: 0.8;
+}
+@media (min-width: 2000px) {
+
+.third-slide{
+    content:url(../img/carousel-slides/third.jpg);
+  }
+
 }
